Adicionando componente Header

--- a/Projeto/src/styles.scss
+++ b/Projeto/src/styles.scss
@@ -2,6 +2,7 @@
     background-color: #7097FC;
     box-shadow: 0.1rem 0.2rem 0.5rem #000000;
     opacity: 0.8;
+    
 }
 
 footer{
@@ -15,4 +16,5 @@ a{
     font-weight: bold;
     font-size: 3rem;
     opacity: 1;
+    font-family: 'Roboto', sans-serif;
 }
