Adicionando componente Quem Somos

--- a/Projeto/src/app/app.component.html
+++ b/Projeto/src/app/app.component.html
@@ -1,6 +1,7 @@
+<app-header-component></app-header-component>
 <app-carousel-component></app-carousel-component>
 <div class="div-center">
     <div class="div-content">
-
     </div>
 </div>
+<app-footer-component></app-footer-component>
