--- a/Projeto/src/styles.scss
+++ b/Projeto/src/styles.scss
@@ -1,13 +1,5 @@
-.navbar{
-    background-color: #7097FC;
-    box-shadow: 0.1rem 0.2rem 0.5rem #000000;
-    opacity: 0.8;
-}
-
-footer{
-    width: 100vw;
-    height: 15rem;
-    background-image: linear-gradient(white 5%, #000000 40%);
+body{
+    overflow-x: hidden;
 }
 
 a{
