Adicionando componente Por que doar

--- a/Projeto/src/app/carousel-component/carousel-component.component.scss
+++ b/Projeto/src/app/carousel-component/carousel-component.component.scss
@@ -12,7 +12,7 @@
 
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
-    background-color: #7097FC;
+    background-color: rgba(211, 211, 211, 0.5);
     border-radius: 1rem;
     border: solid 0.05rem;
 }
