--- a/Projeto/src/app/header-component/header-component.component.html
+++ b/Projeto/src/app/header-component/header-component.component.html
@@ -1,7 +1,7 @@
 <header class="fixed-top">
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Ação Solidária</a>
+        <a routerLink="" class="navbar-brand" href="#">Ação Solidária</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -9,13 +9,13 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Quem Somos?</a>
+              <a routerLink="/QuemSomos" class="nav-link active" aria-current="page" href="#">Quem Somos?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Por que doar?</a>
+              <a routerLink="/PorQueDoar" class="nav-link" href="#">Por que doar?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contato</a>
+              <a routerLink="/Contato" class="nav-link" href="#">Contato</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -23,9 +23,9 @@
                 Cadastre-se
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Cadastro Doador</a></li>
-                <li><a class="dropdown-item" href="#">Cadastro Necessitado</a></li>
-                <li><a class="dropdown-item" href="#">Cadastro Estabelecimento</a></li>
+                <li><a routerLink="/CadastroDoador" class="dropdown-item" href="#">Cadastro Doador</a></li>
+                <li><a routerLink="/CadastroNecessitado" class="dropdown-item" href="#">Cadastro Necessitado</a></li>
+                <li><a routerLink="/CadastroEstabelecimento" class="dropdown-item" href="#">Cadastro Estabelecimento</a></li>
               </ul>
             </li>
           </ul>
