Criando roteamento aos links

--- a/Projeto/src/app/app.component.html
+++ b/Projeto/src/app/app.component.html
@@ -2,6 +2,7 @@
 <app-carousel-component></app-carousel-component>
 <div class="div-center">
     <div class="div-content">
+        <router-outlet></router-outlet>
     </div>
 </div>
 <app-footer-component></app-footer-component>
