--- a/Projeto/src/app/quemsomos-component/quemsomos.component.html
+++ b/Projeto/src/app/quemsomos-component/quemsomos.component.html
@@ -1,4 +1,108 @@
-<div *ngFor="">
-    <h2></h2>
-    <p></p>
+<div class="accordion accordion-flush" id="accordionFlushExample">
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingOne">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                Quem Somos
+            </button>
+        </h2>
+        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+            data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Fundada em 2020, a instituição Happy Help começou atuando por meio de grupos de
+                mensagens,onde ocorria todo o processo de contato entre os voluntários para realizar as doações.Visto
+                que existe um grande volume de pessoas que necessitam de ajuda, a instituição teve a ideia de criar um
+                site para melhor atender os necessitados.</div>
+        </div>
+    </div>
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                A instituição
+            </button>
+        </h2>
+        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+            data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Happy Help é uma instituição sem fins lucrativos que tem como foco, formar uma
+                rede solidária atuando atráves de doações.Sejam elas de roupas,alimentos,móveis ou de forma financeira
+                com o valor que o doador desejar.Sendo assim, todo o processo de doação passa por nossos voluntários
+                antes de chegar ao necessitado.Tudo isso para realizarmos uma doação de forma segura.</div>
+        </div>
+    </div>
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                Como atuamos?
+            </button>
+        </h2>
+        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+            data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Você pode ser tornar um voluntário da instituição Happy Help, realizando o
+                cadastro no site, onde você optar por ser um doador e assim então ajudando quem mais precisa.Sendo assim
+                você se tornando um doador, passará a participar de todo o processo de triagem das doações.
+                Alimentos,roupas,móveis,eletrodomésticos,financeiro e entre outras doações.Os alimentos são separados e
+                feitos os kits conforme a quantidade de pessoas que tem na família a qual esse kit será doado. O
+                processo das roupas é feito uma seleção e higienização, e os alimentos passam por uma verificação no
+                prazo de validade, tudo isso para a segurança do necessitado.
+            </div>
+        </div>
+    </div>
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingFour">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                Missão
+            </button>
+        </h2>
+        <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
+            data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Transformamos vidas através de doações, capazes de promover ao próximo um
+                sentimento de alegria e esperança de vida.
+            </div>
+        </div>
+    </div>
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingFive">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                Visão
+            </button>
+        </h2>
+        <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive"
+            data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Um futuro em que a solidariedade a quem precisa, nunca seja esquecida, o menos é
+                mais.
+            </div>
+        </div>
+    </div>
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingSix">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
+                Valores
+            </button>
+        </h2>
+        <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix"
+            data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Solidariedade Humanidade Transparência
+            </div>
+        </div>
+    </div>
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingSeven">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseSeven" aria-expanded="false" aria-controls="flush-collapseSeven">
+                Premissa
+            </button>
+        </h2>
+        <div id="flush-collapseSeven" class="accordion-collapse collapse" aria-labelledby="flush-headingSeven"
+            data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Acreditamos que todo ser humano é capaz de se desenvolver, desde que lhe sejam
+                oferecidas as condições favoráveis. Cada um pode ser um multiplicador de alegria. Tendo o amor como
+                princípio e a força do trabalho de doação, acreditamos que este projeto seja um caminho para a
+                transformação de vidas e para a construção de um mundo melhor.
+            </div>
+        </div>
+    </div>
 </div>
