Montando estrutura de cards

--- a/Projeto/src/app/app.component.html
+++ b/Projeto/src/app/app.component.html
@@ -1,7 +1,10 @@
 <app-header-component></app-header-component>
 <app-carousel-component></app-carousel-component>
-<div class="div-center">
-    <div class="div-content">
+<div class="div-centralizador">
+    <div class="div-conteudo">
+        <div class="div-cards">
+            <app-cards-component></app-cards-component>
+        </div>
         <router-outlet></router-outlet>
     </div>
 </div>
