--- a/Projeto/src/app/app.component.scss
+++ b/Projeto/src/app/app.component.scss
@@ -1,16 +1,20 @@
-.div-center {
+.div-centralizador {
     display: flex;
-    height: 30rem;
     align-items: center;
     width: 100vw;
     justify-content: center;
+    margin-top: 1rem;
 }
 
-.div-content {
-    height: 30rem;
+.div-conteudo {
     align-items: center;
-    background-image: linear-gradient(white 5%, #0477FE 15%, white 90%);
     width: 70vw;
+}
+
+.div-cards{
+    padding: 2rem;
     border-radius: 1rem;
     box-shadow: 0.2rem 0.2rem 0.2rem #000000;
+    background-image: linear-gradient(#0477FE 15%, white 98%);
+    margin-bottom: 3rem;
 }
