Subindo modificações feitas no header

--- a/Projeto/src/app/app.component.html
+++ b/Projeto/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header-component></app-header-component>
 <app-carousel-component></app-carousel-component>
 <div class="div-centralizador">
-    <div class="div-conteudo">
+    <div class="div-conteudo" data-bs-spy="scroll" data-bs-target="#navbar-example2" tabindex="0">
         <div class="div-cards">
             <app-cards-component></app-cards-component>
         </div>
