--- a/Projeto/src/app/header-component/header-component.component.scss
+++ b/Projeto/src/app/header-component/header-component.component.scss
@@ -2,5 +2,6 @@
     background-color: #7097FC;
     box-shadow: 0.1rem 0.2rem 0.5rem #000000;
     opacity: 0.9;
-    height: 4.5rem;
+    height: 3.5rem;
+    text-shadow: 0.05rem 0.05rem 0.05rem;
 }
