--- a/Projeto/src/styles.scss
+++ b/Projeto/src/styles.scss
@@ -4,12 +4,5 @@ html{
 
 body{
     overflow-x: hidden;
-}
-
-a{
-    font-family:'Times New Roman', Times, serif;
-    font-weight: bold;
-    font-size: 3rem;
-    opacity: 1;
-    font-family: 'Roboto', sans-serif;
+    overflow-y: scroll
 }
