Adicionando componente Login

--- a/Projeto/src/app/cards-component/cards.component.html
+++ b/Projeto/src/app/cards-component/cards.component.html
@@ -3,7 +3,7 @@
       <div class="card h-100">
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title"></h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         </div>
         <div class="card-footer">
@@ -11,7 +11,7 @@
             <div class="progress">
               <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <button type="button" class="btn btn-info">Ajudar</button>
+            <button type="button" class="btn btn-info">Doe Agora</button>
           </div>
         </div>
       </div>
@@ -28,7 +28,7 @@
             <div class="progress">
               <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 33%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <button type="button" class="btn btn-info">Ajudar</button>
+            <button type="button" class="btn btn-info">Doe Agora</button>
           </div>
         </div>
       </div>
@@ -45,7 +45,7 @@
             <div class="progress">
               <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 85%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <button type="button" class="btn btn-info">Ajudar</button>
+            <button type="button" class="btn btn-info">Doe Agora</button>
           </div>
         </div>
       </div>
