Criando a pasta Componentes

--- a/Projeto/src/app/Componentes/header-component/header-component.component.html
+++ b/Projeto/src/app/Componentes/header-component/header-component.component.html
@@ -17,6 +17,9 @@
             <li class="nav-item">
               <a routerLink="/Contato" class="nav-link" href="#">Contato</a>
             </li>
+            <li class="nav-item">
+              <a routerLink="/Login" class="nav-link" href="#">Login</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">
