Ajustando imagens dos cards

--- a/Projeto/src/app/Componentes/cards-component/cards.component.html
+++ b/Projeto/src/app/Componentes/cards-component/cards.component.html
@@ -1,9 +1,9 @@
 <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card h-100">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="assets/doeagra.jpg" class="card-img-top img-responsive" alt="Contribua com a quantia em dinheiro que puder">
         <div class="card-body">
-          <h5 class="card-title"></h5>
+          <h5 class="card-title">Card Title</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         </div>
         <div class="card-footer">
@@ -18,7 +18,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="assets/doealimentos.jpg" class="card-img-top img-responsive" alt="Contribua com a quantia em alimentos que puder">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -35,7 +35,7 @@
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="assets/doeroupas.jpg" class="card-img-top img-responsive" alt="Contribua com a quantia em peças de roupa que puder">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
