--- a/Projeto/src/app/app.component.scss
+++ b/Projeto/src/app/app.component.scss
@@ -15,6 +15,6 @@
     padding: 2rem;
     border-radius: 1rem;
     box-shadow: 0.2rem 0.2rem 0.2rem #000000;
-    background-image: linear-gradient(#00BFFF 15%, #00FFFF 99%);
+    background-image: linear-gradient(#1C1C1C 15%, #4F4F4F 99%);
     margin-bottom: 3rem;
 }
