Estilizando componente porquedoar

--- a/Projeto/src/app/Componentes/cards-component/cards.component.scss
+++ b/Projeto/src/app/Componentes/cards-component/cards.component.scss
@@ -7,6 +7,10 @@
     box-shadow: 0.1rem 0.1rem 0.1rem #000000;
 }
 
+.card:hover{
+    width: 18rem;
+}
+
 .progress{
     margin-bottom: 0.6rem;
 }
