--- a/Projeto/src/app/Componentes/porquedoar-component/porquedoar.component.html
+++ b/Projeto/src/app/Componentes/porquedoar-component/porquedoar.component.html
@@ -1,1 +1,58 @@
-<p>porquedoar works!</p>
+<div class="accordion" id="accordionPanelsStayOpenExample">
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                aria-controls="panelsStayOpen-collapseOne">
+                Por que doar?
+            </button>
+        </h2>
+        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+            aria-labelledby="panelsStayOpen-headingOne">
+            <div class="accordion-body">
+                O ato de doar contribui efetivamente com a transformação para o melhor da sociedade, das instituições e,
+                principalmente das pessoas. Ao enxergar as necessidades do próximo e fazer algo para supri-las, nos
+                tornamos mais justos e igualitários.
+                Doar vai muito além de “transferir gratuitamente a outra pessoa, de forma legal, bem, quantia, imóvel,
+                etc.”: doar é um ato de desprendimento, renúncia, entrega e amor ao próximo.
+            </div>
+        </div>
+    </div>
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                aria-controls="panelsStayOpen-collapseTwo">
+                Doação
+            </button>
+        </h2>
+        <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+            aria-labelledby="panelsStayOpen-headingTwo">
+            <div class="accordion-body">
+                No dicionário, doar significa “transferir gratuitamente a outra pessoa, de forma legal, bem, quantia,
+                imóvel ou vantagens etc. que antes era de sua posse”. Mas nós, do Instituto Happy Help, sabemos que doar
+                é muito mais do que isso.
+                Ao longo de mais de quatro décadas de existência, a instituição Happy Help mostra como essa pequena
+                palavra conseguiu transformar a vida de milhões de pessoas – sejam elas necessitados ou doadores.
+            </div>
+        </div>
+    </div>
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                aria-controls="panelsStayOpen-collapseThree">
+                Ato de ser solidario
+            </button>
+        </h2>
+        <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+            aria-labelledby="panelsStayOpen-headingThree">
+            <div class="accordion-body">
+                Solidariedade é a ação de ser bondoso com o próximo, assumindo uma função de colaborador. Portanto, ser
+                solidário consiste em ajudar o outro, com boas intenções e generosidade. Dessa forma, a solidariedade é
+                legítima, sem qualquer tipo de discriminação.
+                Neste vídeo podemos ver algumas palavras sobre solidariedade.
+            </div>
+        </div>
+    </div>
+</div>
