Estilizando componentes de cadastro

--- a/Projeto/src/app/Componentes/cards-component/cards.component.html
+++ b/Projeto/src/app/Componentes/cards-component/cards.component.html
@@ -1,13 +1,14 @@
-<div class="row row-cols-1 row-cols-md-3 g-4">
+<div class="row row-cols-1 row-cols-md-3 g-4 mb-3">
     <div class="col">
       <div class="card h-100">
         <img src="assets/doeagra.jpg" class="card-img-top img-responsive" alt="Contribua com a quantia em dinheiro que puder">
         <div class="card-body">
-          <h5 class="card-title">Card Title</h5>
+          <h5 class="card-title">Campanha Pix Solidário</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         </div>
         <div class="card-footer">
           <div class="info-footer">
+            <label>Nos ajude a superar o mês anterior!</label>
             <div class="progress">
               <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -20,11 +21,12 @@
       <div class="card h-100">
         <img src="assets/doealimentos.jpg" class="card-img-top img-responsive" alt="Contribua com a quantia em alimentos que puder">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Campanha Fome Zero</h5>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
         </div>
         <div class="card-footer">
           <div class="info-footer">
+            <label>Nos ajude a superar o mês anterior!</label>
             <div class="progress">
               <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 33%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -37,11 +39,12 @@
       <div class="card h-100">
         <img src="assets/doeroupas.jpg" class="card-img-top img-responsive" alt="Contribua com a quantia em peças de roupa que puder">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Campanha do Agasalho</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
         </div>
         <div class="card-footer">
           <div class="info-footer">
+            <label>Nos ajude a superar o mês anterior!</label>
             <div class="progress">
               <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 85%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
