--- a/Projeto/src/app/Componentes/carousel-component/carousel-component.component.html
+++ b/Projeto/src/app/Componentes/carousel-component/carousel-component.component.html
@@ -11,21 +11,21 @@
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
                 <img src="assets/istockphoto-1217752899-170667a.jpg" class="d-block w-100" alt="Doe">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-none d-md-block fs-4">
                     <h5 >Faça parte dessa equipe e ajude centenas de pessoas.</h5>
                     <p >Para doar entre em contato com nossos estabelecimentos parceiros.</p>
                 </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
                 <img src="assets/toa-heftiba-_UIVmIBB3JU-unsplash.jpg" class="d-block w-100" alt="Ajude">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-none d-md-block fs-4">
                     <h5 >Faça parte dessa equipe e ajude centenas de pessoas.</h5>
                     <p >Para doar entre em contato com nossos estabelecimentos parceiros.</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="assets\joe-holiday-dOZVUW7Bu00-unsplash.jpg" class="d-block w-100" alt="Contribua">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-none d-md-block fs-4">
                     <h5>Faça parte dessa equipe e ajude centenas de pessoas.</h5>
                     <p>Para doar entre em contato com nossos estabelecimentos parceiros.</p>
                 </div>
