--- a/Projeto/src/app/Componentes/cadastroestabelecimento-component/cadastroestabelecimento-component.component.html
+++ b/Projeto/src/app/Componentes/cadastroestabelecimento-component/cadastroestabelecimento-component.component.html
@@ -1,1 +1,67 @@
-<p>cadastroestabelecimento-component works!</p>
+<div class="divConteudo text-center">
+    <label class="fs-4">Faça parte da equipe e ajude milhões de pessoas.</label>
+    <form class="g-0">
+      <div class="col-md-10 ">
+        <label for="validationServer01" class="form-label text-start">Nome</label>
+        <input type="text" class="form-control is-valid align-self-center" id="validationServer01" value="Mark" required>
+        <div class="valid-feedback">
+          Aprovado!
+        </div>
+      </div>
+      <div class="col-md-10 ">
+        <label for="validationServerUsername" class="form-label text-start">Email</label>
+        <div class="input-group has-validation">
+          <span class="input-group-text" id="inputGroupPrepend3">@</span>
+          <input type="email" class="form-control is-invalid" id="validationServerUsername"
+            aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
+          <div id="validationServerUsernameFeedback" class="invalid-feedback">
+            Por favor, escolha um email válido.
+          </div>
+        </div>
+      </div>
+      <div class="col-md-10 ">
+        <label for="validationServer04" class="form-label text-start">Estado</label>
+        <select class="form-select is-invalid" id="validationServer04" aria-describedby="validationServer04Feedback"
+          required>
+          <option selected disabled value="">Escolha...</option>
+          <option>RS</option>
+          <option>SC</option>
+          <option>PR</option>
+        </select>
+        <div id="validationServer04Feedback" class="invalid-feedback">
+          Selecione um estado válido.
+        </div>
+      </div>
+      <div class="col-md-10 ">
+        <label for="validationServer03" class="form-label text-start">Cidade</label>
+        <input type="text" class="form-control is-invalid" id="validationServer03"
+          aria-describedby="validationServer03Feedback" required>
+        <div id="validationServer03Feedback" class="invalid-feedback">
+          Forneça uma cidade válida.
+        </div>
+      </div>
+      <div class="col-md-10 ">
+        <label for="validationServer05" class="form-label text-start">CEP</label>
+        <input type="text" class="form-control is-invalid" id="validationServer05"
+          aria-describedby="validationServer05Feedback" required>
+        <div id="validationServer05Feedback" class="invalid-feedback">
+          Forneça um CEP válido.
+        </div>
+      </div>
+      <div class="col-12">
+        <div class="form-check">
+          <input class="form-check-input is-invalid" type="checkbox" value="" id="invalidCheck3"
+            aria-describedby="invalidCheck3Feedback" required>
+          <label class="form-check-label" for="invalidCheck3">
+            Concorde com os termos e condições
+          </label>
+          <div id="invalidCheck3Feedback" class="invalid-feedback">
+            Você deve concordar antes de enviar.
+          </div>
+        </div>
+      </div>
+      <div class="col-12 ">
+        <button class="btn btn-primary" type="submit">Enviar</button>
+      </div>
+    </form>
+  </div>
