--- a/Projeto/src/app/app.component.html
+++ b/Projeto/src/app/app.component.html
@@ -1,11 +1,12 @@
 <app-header-component></app-header-component>
 <app-carousel-component></app-carousel-component>
 <div class="div-centralizador">
-    <div class="div-conteudo" data-bs-spy="scroll" data-bs-target="#navbar-example2" tabindex="0">
+    <div class="div-conteudo">
         <div class="div-cards">
             <app-cards-component></app-cards-component>
+            <router-outlet></router-outlet>
         </div>
-        <router-outlet></router-outlet>
+        
     </div>
 </div>
 <app-footer-component></app-footer-component>
