--- a/Projeto/src/app/Componentes/cadastrodoador-component/cadastrodoador-component.component.html
+++ b/Projeto/src/app/Componentes/cadastrodoador-component/cadastrodoador-component.component.html
@@ -1,29 +1,37 @@
-<div class="divConteudo text-center">
+<div class="container d-flex text-center p-4 divConteudo justify-content-evenly">
   <label class="fs-4">Faça parte da equipe e ajude milhões de pessoas.</label>
-  <form class="g-0">
-    <div class="col-md-10 ">
-      <label for="validationServer01" class="form-label text-start">Nome</label>
-      <input type="text" class="form-control is-valid align-self-center" id="validationServer01" value="Mark" required>
+  <form class="g-0 formulario">
+    <div class="col-md-12">
+      <label for="validationServer01" class="form-label text-start visually-hidden">Nome</label>
+      <input type="text" class="form-control is-valid align-self-center" id="validationServer01" placeholder="Nome"
+        value="" required>
       <div class="valid-feedback">
         Aprovado!
       </div>
     </div>
-    <div class="col-md-10 ">
-      <label for="validationServerUsername" class="form-label text-start">Email</label>
+    <div class="col-md-12">
+      <label for="validationServerEmail" class="form-label text-start visually-hidden">Email</label>
       <div class="input-group has-validation">
         <span class="input-group-text" id="inputGroupPrepend3">@</span>
-        <input type="email" class="form-control is-invalid" id="validationServerUsername"
-          aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
+        <input type="email" class="form-control is-invalid" id="validationServerEmail"
+          aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" placeholder="E-mail" required>
         <div id="validationServerUsernameFeedback" class="invalid-feedback">
           Por favor, escolha um email válido.
         </div>
       </div>
     </div>
-    <div class="col-md-10 ">
-      <label for="validationServer04" class="form-label text-start">Estado</label>
+    <div class="col-md-12">
+      <label for="inputPassword2 validationServer01" class="form-label visually-hidden">Senha</label>
+      <input type="password" class="form-control is-valid" id="validationServer01" placeholder="Senha" required>
+      <div class="valid-feedback">
+        Aprovado!
+      </div>
+    </div>
+    <div class="col-md-12 ">
+      <label for="validationServer04" class="form-label text-start visually-hidden">Estado</label>
       <select class="form-select is-invalid" id="validationServer04" aria-describedby="validationServer04Feedback"
         required>
-        <option selected disabled value="">Escolha...</option>
+        <option selected disabled value="">Estado...</option>
         <option>RS</option>
         <option>SC</option>
         <option>PR</option>
@@ -32,18 +40,18 @@
         Selecione um estado válido.
       </div>
     </div>
-    <div class="col-md-10 ">
-      <label for="validationServer03" class="form-label text-start">Cidade</label>
+    <div class="col-md-12 ">
+      <label for="validationServer03" class="form-label text-start visually-hidden">Cidade</label>
       <input type="text" class="form-control is-invalid" id="validationServer03"
-        aria-describedby="validationServer03Feedback" required>
+        aria-describedby="validationServer03Feedback" placeholder="Cidade" required>
       <div id="validationServer03Feedback" class="invalid-feedback">
         Forneça uma cidade válida.
       </div>
     </div>
-    <div class="col-md-10 ">
-      <label for="validationServer05" class="form-label text-start">CEP</label>
+    <div class="col-md-12 ">
+      <label for="validationServer05" class="form-label text-start visually-hidden">CEP</label>
       <input type="text" class="form-control is-invalid" id="validationServer05"
-        aria-describedby="validationServer05Feedback" required>
+        aria-describedby="validationServer05Feedback" placeholder="CEP" required>
       <div id="validationServer05Feedback" class="invalid-feedback">
         Forneça um CEP válido.
       </div>
@@ -60,8 +68,9 @@
         </div>
       </div>
     </div>
-    <div class="col-12 ">
+    <div class="col-12 d-flex gap-2 justify-content-center mt-3">
       <button class="btn btn-primary" type="submit">Enviar</button>
+      <input class="btn btn-danger" type="reset" value="Limpar">
     </div>
   </form>
 </div>
