--- a/Projeto/src/app/Componentes/cadastroestabelecimento-component/cadastroestabelecimento-component.component.scss
+++ b/Projeto/src/app/Componentes/cadastroestabelecimento-component/cadastroestabelecimento-component.component.scss
@@ -1,10 +1,11 @@
-.divConteudo{
-    padding: 1rem;
-    background-image: linear-gradient(#9E3DFF 15%, #4F4F4F 99%);
-    width: 23rem;
-    
-  }
-  
-  label{
+  label {
     font-family: 'Staatliches', cursive;
+  }
+
+  .divConteudo {
+    background-image: linear-gradient(#F0F8FF 15%, #4F4F4F 99%);
+  }
+
+  .formulario {
+    width: 20rem;
   }
