--- a/Projeto/src/app/Componentes/cadastronecessitado-component/cadastronecessitado-component.component.scss
+++ b/Projeto/src/app/Componentes/cadastronecessitado-component/cadastronecessitado-component.component.scss
@@ -1,10 +1,11 @@
+label{
+  font-family: 'Staatliches', cursive;
+}
+
 .divConteudo{
-    padding: 1rem;
-    background-image: linear-gradient(#9E3DFF 15%, #4F4F4F 99%);
-    width: 23rem;
-    
-  }
-  
-  label{
-    font-family: 'Staatliches', cursive;
-  }
+  background-image: linear-gradient(#F0F8FF 15%, #4F4F4F 99%);
+}
+
+.formulario{
+  width: 20rem;
+}
